--- a/package.json
+++ b/package.json
@@ -19,5 +19,14 @@
   "bugs": {
     "url": "https://github.com/rossjrw/series-replace/issues"
   },
-  "homepage": "https://github.com/rossjrw/series-replace#readme"
+  "homepage": "https://github.com/rossjrw/series-replace#readme",
+  "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "fancy-log": "^1.3.3",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0-beta.2",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "postcss-grid-kiss": "^2.3.0",
+    "typescript": "^3.9.3"
+  }
 }
