--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/rossjrw/series-replace#readme",
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "bulma": "^0.8.2",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0-beta.2",
