--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Make a series of regex find-and-replace's.",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -20,13 +20,18 @@
     "url": "https://github.com/rossjrw/series-replace/issues"
   },
   "homepage": "https://github.com/rossjrw/series-replace#readme",
+  "browserslist": "cover 99.5%",
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "babel-preset-env": "^1.7.0",
     "bulma": "^0.8.2",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0-beta.2",
+    "gulp-sass": "^4.1.0",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "node-sass": "^4.14.1",
+    "postcss": "^7.0.31",
     "postcss-grid-kiss": "^2.3.0",
     "typescript": "^3.9.3"
   }
