--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-sass": "^4.14.1",
     "postcss": "^7.0.31",
     "postcss-grid-kiss": "^2.3.0",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "vue": "^2.6.11"
   }
 }
