--- a/package.json
+++ b/package.json
@@ -24,14 +24,30 @@
   "browserslist": "cover 99.5%",
   "devDependencies": {
     "@babel/core": "^7.9.6",
-    "babel-preset-env": "^1.7.0",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-typescript": "^7.9.0",
+    "babel-loader": "^8.1.0",
     "bulma": "^0.8.2",
+    "css-loader": "^3.5.3",
     "fancy-log": "^1.3.3",
+    "fibers": "^5.0.0",
     "node-sass": "^4.14.1",
     "postcss": "^7.0.31",
     "postcss-grid-kiss": "^2.3.0",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^1.2.1",
+    "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
     "vue": "^2.6.11",
-    "webpack": "^4.43.0"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-typescript"
+    ]
   }
 }
