--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@babel/preset-typescript": "^7.9.0",
     "babel-loader": "^8.1.0",
     "bulma": "^0.8.2",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "fancy-log": "^1.3.3",
     "fibers": "^5.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
     "postcss": "^7.0.31",
     "postcss-grid-kiss": "^2.3.0",
