--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^3.5.3",
     "fancy-log": "^1.3.3",
     "fibers": "^5.0.0",
+    "github-corners": "^0.1.0",
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
     "postcss": "^7.0.31",
