--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,16 +11,20 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
  
-    - name: Install and Build
-      run: |
-        npm install
-        npm run build
+    - name: Install
+      run: npm install
+
+    - name: Build
+      run: npm run build
 
   deploy:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+ 
     - name: Deploy
-      if: github.ref == 'refs/heads/master'
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
