--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "postcss-grid-kiss": "^2.3.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "script-ext-html-webpack-plugin": "^2.1.4",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
