--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
     "vue": "^2.6.11",
+    "vue-loader": "^15.9.2",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
