--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --display-modules"
+    "build": "webpack --config webpack.config.js --mode development"
   },
   "repository": {
     "type": "git",
