--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
+    "@types/uuid": "^8.0.0",
     "babel-loader": "^8.1.0",
     "bulma": "^0.8.2",
     "clean-webpack-plugin": "^3.0.0",
