--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "@types/uuid": "^8.0.0",
     "babel-loader": "^8.1.0",
     "bulma": "^0.8.2",
