--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@types/lodash": "^4.14.154",
     "@types/uuid": "^8.0.0",
     "babel-loader": "^8.1.0",
     "bulma": "^0.8.2",
@@ -38,9 +39,11 @@
     "fancy-log": "^1.3.3",
     "fibers": "^5.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
     "postcss": "^7.0.31",
     "postcss-grid-kiss": "^2.3.0",
+    "query-string": "^6.12.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
