--- a/package.json
+++ b/package.json
@@ -32,10 +32,14 @@
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "@types/lodash": "^4.14.154",
     "@types/uuid": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
     "babel-loader": "^8.1.0",
     "bulma": "^0.8.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
+    "eslint": "^7.1.0",
+    "eslint-plugin-vue": "^6.2.2",
     "fancy-log": "^1.3.3",
     "fibers": "^5.0.0",
     "html-webpack-plugin": "^4.3.0",
