--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "lib": [
-      "es2020"
+      "es2020",
+      "dom"
     ]
   },
   "paths": {
