--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "@types/lodash": "^4.14.155",
-    "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
     "babel-loader": "^8.1.0",
     "babel-preset-typescript-vue": "^1.1.1",
     "bulma": "^0.8.2",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.6.5",
     "css-loader": "^3.5.3",
     "eslint": "^7.1.0",
     "eslint-plugin-vue": "^6.2.2",
@@ -53,7 +53,6 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.1",
     "typescript": "^3.9.3",
-    "uuid": "^8.1.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.2",
     "vue-style-loader": "^4.1.2",
@@ -65,7 +64,13 @@
   },
   "babel": {
     "presets": [
-      "@babel/preset-env",
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "usage",
+          "corejs": 3
+        }
+      ],
       "babel-preset-typescript-vue"
     ]
   }
