--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-typescript-vue": "^1.1.1",
     "bulma": "^0.8.2",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.5",
     "css-loader": "^3.5.3",
     "eslint": "^7.1.0",
